[package]
name = "sqlite_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.11"
lazy_static = "1.4.0"
predicates = "3.0.3"
regex = "1.8.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_bytes = "0.11.9"
